--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Programa para Armazenamento de vídeos e fotos localmente com opção de acesso em Smartphone e outros computadores na rede.",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "lint": "eslint '**/*.js'",
+    "lint:fix": "eslint '**/*.js' --fix"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,14 @@
   "dependencies": {
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "http-errors": "^1.7.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
