--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Programa para Armazenamento de vídeos e fotos localmente com opção de acesso em Smartphone e outros computadores na rede.",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon -e js,ejs,json,css --exec node ./bin/www",
     "lint": "eslint '**/*.js'",
     "lint:fix": "eslint '**/*.js' --fix"
   },
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "nodemon": "^2.0.3"
   }
 }
