--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,53 @@
-version: '3'
-
+version: '3.7'
 services:
-  nodejs:
-    build:
-        context: .
-        dockerfile: Dockerfile
-    image: nodejs
-    container_name: app-xobpord
-    restart: unless-stopped
-    environment:
-        NODE_ENV: development
+  xobpordapp:
+    build: 
+      context: .
+      dockerfile: docker/Dockerfile.nodejs
     ports:
-        - "3000:3000"
+      - 3000:3000
+    container_name: app_xorbpord
     volumes:
-        - .:/usr/src/app
-        - /usr/src/app/node_modules
+      - ./app:/usr/app
+      -  /usr/app/node_modules
+    depends_on:
+      - db
+      - phpmyadmin
+    networks:
+      network-proj-xobpord:
+        ipv4_address: 173.20.0.4
+  db:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.mysql
+    image: mysql-xobpord
+    container_name: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: passwordRoot
+    networks:
+      network-proj-xobpord:
+        ipv4_address: 173.20.0.2
+  
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    ports:
+      - 8080:80
+    depends_on:
+      - db
+  # environment:
+      #PMA_ARBITRARY: 1
+    networks:
+      network-proj-xobpord:
+        ipv4_address: 173.20.0.3
+
+networks:
+  network-proj-xobpord:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 173.20.0.0/24
