--- a/docker/Dockerfile.nodejs
+++ b/docker/Dockerfile.nodejs
@@ -2,5 +2,5 @@ FROM node
 WORKDIR /usr/app/
 COPY ./app/package.json  ./
 RUN npm install
-EXPOSE 8080
-CMD ["npm","start","start"]
+EXPOSE 3000
+CMD ["npm","run","start"]
