--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,8 @@
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "sequelize": "^5.21.8"
+    "sequelize": "^5.21.8",
+    "multer": "1.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
