--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon -e js,ejs,json,css --exec babel-node server.js",
     "lint": "eslint '**/*.js'",
     "lint:fix": "eslint '**/*.js'  --fix",
+    "migration": "sequelize db:migrate",
     "test": "NODE_ENV=test sequelize db:migrate && jest ",
     "test:cover": "NODE_ENV=test sequelize db:migrate && jest --coverage",
     "test:watch": "NODE_ENV=test sequelize db:migrate && jest --watch",
