--- a/docker/Dockerfile.mysql
+++ b/docker/Dockerfile.mysql
@@ -1,3 +1,3 @@
 FROM mysql
-COPY docker/resources/dump.mysql.sql /docker-entrypoint-initdb.d/
+COPY docker/resources/mysql/dump.mysql.sql /docker-entrypoint-initdb.d/
 EXPOSE 3306
