--- a/docker/Dockerfile.nodejs
+++ b/docker/Dockerfile.nodejs
@@ -1,6 +1,13 @@
-FROM node
+FROM node:lts-stretch
 WORKDIR /usr/app/
 COPY ./app/package.json  ./
+
 RUN npm install
+RUN mkdir uploads
+
+COPY ./docker/resources/app/entrypoint.sh  ../../
+RUN chmod +x /entrypoint.sh
+
 EXPOSE 3000
-CMD ["npm","run","start"]
+
+CMD ["sh", "./entrypoint.sh"]
