--- a/app/package.json
+++ b/app/package.json
@@ -33,11 +33,12 @@
     "express": "~4.16.1",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "1.4.2",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "sequelize": "^5.21.8",
-    "multer": "1.4.2"
+    "sequelize": "^5.21.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
