Add migrations to file upload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./app:/usr/app
       -  /usr/app/node_modules
-      -  /usr/app/uploads
+      -  ./app/uploads:/usr/app/uploads
     environment: 
       - NODE_ENV=development
     env_file: 
