--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "fs-extra": "^9.0.0",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "1.4.2",
